--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <head>
-        <title>Brian Sakurada - Work Samples</title>
+        <title>櫻田ブライアン - サンプル</title>
     </head>
     <body>
-        
+        <section id="welcome">
+            <h1>よろしく櫻田ブライアンと申します。</h1>
+        </section>
     </body>
     <footer>
 
