Added a project image.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <section id="welcome">
-            <h1>よろしく櫻田ブライアンと申します。</h1>
+            <h２>よろしく、櫻田ブライアンと申します。</h２>
         </section>
     </body>
     <footer>
