--- a/index.html
+++ b/index.html
@@ -3,10 +3,70 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <head>
         <title>櫻田ブライアン - サンプル</title>
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+            integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+            crossorigin="anonymous"
+            />
     </head>
     <body>
-        <section id="welcome">
-            <h２>よろしく、櫻田ブライアンと申します。</h２>
+        <nav id="navbar" class="navbar">
+            <ul class="navlist">
+                <li><a href"#welcome-section">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <section id="welcome-section">
+            <h1>よろしく、櫻田ブライアンと申します</h1>
+            <h2>ソフトウェアエンジニア</h2>
+        </section>
+        <section id="projects">
+            <h2>これらは私のプロジェクトのサンプルです</h2>
+            <div class="projects-grid">
+                <a
+                    href="https://sakubs.github.io/masamune.github.io/"
+                    target="_blank"
+                    class="project project-tile">
+                    <img
+                        class="project-image"
+                        src="https://sakubs.github.io/assets/masamune.png"
+                        alt="project"
+                        />
+                    <p class="project-title">
+                    <span class="code">&lt;</span>
+                        Masamune Tribute Page 
+                    <span class="code">&#47;&gt;</span>
+                    </p>
+                </a>
+            </div>
+        </section>
+        <section id="contact">
+            <h2>一緒に素晴らしいものを作りましょう</h2>
+            <div class="contact-links">
+                <a 
+                    id="profile-link" 
+                    href="https://github.com/sakubs" 
+                    target="_blank" 
+                    class="btn contact-details">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+                <a 
+                    id="linkedin-link" 
+                    href="https://www.linkedin.com/in/brianmoriya/" 
+                    target="_blank" 
+                    class="btn contact-details">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a 
+                    id="freelancer-link" 
+                    href="https://www.linkedin.com/in/brianmoriya/" 
+                    target="_blank" 
+                    class="btn contact-details">
+                    <i class="fas fa-briefcase"></i> Freelancer
+                </a>
+            </div>
         </section>
     </body>
     <footer>
