--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     class="project project-tile">
                     <img
                         class="project-image"
-                        src="https://sakubs.github.io/assets/masamune.png"
+                        src="/assets/masamune.png"
                         alt="project"
                         />
                     <p class="project-title">
