Fixed the about section link.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <nav id="navbar" class="navbar">
             <ul class="navlist">
-                <li><a href"#welcome-section">About</a></li>
+                <li><a href="#welcome-section">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
