Added a style sheet.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
             crossorigin="anonymous"
             />
+        <link 
+            rel="stylesheet" 
+            href="assets/style.css"
+            />
     </head>
     <body>
         <nav id="navbar" class="navbar">
