Made a link to external css file.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             />
         <link 
             rel="stylesheet" 
-            href="assets/style.css"
+            href="assets/style.css" 
+            type="text/css"
             />
     </head>
     <body>
