Changed image paths.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 class="project project-tile">
                 <img 
                     class="project-image"
-                    src="https://sakubs.github.io/assets/masamune.png"
+                    src="assets/masamune.png"
                     alt="project"
                     />
                 <p class="project-title">
@@ -65,12 +65,12 @@
                 </p>
             </a>
             <a 
-                href="https://sakubs.github.io/masamune.github.io/"
+                href="https://sakubs.github.io/survey.github.io/"
                 target="_blank"
                 class="project project-tile">
                 <img 
                     class="project-image"
-                    src="https://sakubs.github.io/assets/survey.jpg"
+                    src="assets/survey.jpg"
                     alt="project"
                     />
                 <p class="project-title">
