--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </p>
             </a>
             <a 
-                href="https://sakubs.github.io/survey.github.io/"
+                href="https://sakubs.github.io/survey-form-sample/"
                 target="_blank"
                 class="project project-tile">
                 <img 
