--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 class="project project-tile">
                 <img 
                     class="project-image"
-                    src="https://sakubs.github.io/assets/masamune.png"
+                    src="assets/masamune.png"
                     alt="project"
                     />
                 <p class="project-title">
