--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<head>
+        <meta charset="utf-8" 
+        />
+<html lang="jp">
   <link rel="stylesheet" 
     href="style.css" type="text/css" />
   <link
