--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<head>
-        <meta charset="utf-8" 
-        />
 <html lang="jp">
+<head>
+  <meta charset="utf-8" />
   <link rel="stylesheet" 
     href="style.css" type="text/css" />
   <link
@@ -10,8 +9,9 @@
   href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
   integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
   crossorigin="anonymous"
-/>
-<link href="https://fonts.googleapis.com/css?family=Kosugi|Kosugi+Maru&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kosugi|Kosugi+Maru&display=swap" 
+    rel="stylesheet">
+</head>
 <header>
   <nav id="navbar" class="nav">
     <ul class="nav-list">
@@ -53,34 +53,49 @@
     <section id="projects" class="projects-section">
         <div class="projects-grid">
             <a 
-                href="https://sakubs.github.io/masamune.github.io/"
-                target="_blank"
-                class="project project-tile">
-                <img 
-                    class="project-image"
-                    src="https://sakubs.github.io/assets/masamune.png"
-                    alt="project"
-                    />
-                <p class="project-title">
-                    <span class="code">&lt;</span>
-                        Masamune Tribute Page 
-                    <span class="code">&#47;&gt;</span>
-                </p>
+            href="https://sakubs.github.io/masamune.github.io/"
+            target="_blank"
+            class="project project-tile">
+            <img 
+            class="project-image"
+            src="assets/masamune.png"
+            alt="project"
+            />
+            <p class="project-title">
+                <span class="code">&lt;</span>
+                Masamune Tribute Page 
+                <span class="code">&#47;&gt;</span>
+            </p>
             </a>
             <a 
-                href="https://sakubs.github.io/survey.github.io/"
-                target="_blank"
-                class="project project-tile">
-                <img 
-                    class="project-image"
-                    src="assets/survey.jpg"
-                    alt="project"
-                    />
-                <p class="project-title">
-                    <span class="code">&lt;</span>
-                        Survey Form 
-                    <span class="code">&#47;&gt;</span>
-                </p>
+            href="https://sakubs.github.io/survey.github.io/"
+            target="_blank"
+            class="project project-tile">
+            <img 
+            class="project-image"
+            src="assets/survey.jpg"
+            alt="project"
+            />
+            <p class="project-title">
+                <span class="code">&lt;</span>
+                Survey Form 
+                <span class="code">&#47;&gt;</span>
+            </p>
+            </a>
+            <a 
+            href="https://sakubs.github.io/sample-docpage/"
+            target="_blank"
+            class="project project-tile">
+            <img 
+            class="project-image"
+            src="assets/techdoc.jpg"
+            alt="project"
+            />
+            <p class="project-title">
+                <span class="code">&lt;</span>
+                Technical Documentation Page 
+                <span class="code">&#47;&gt;</span>
+            </p>
             </a>
         </div>
     </section>
