--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-  <meta charset="utf-8" />
-  <link rel="stylesheet" 
-    href="style.css" type="text/css" />
-  <link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-  crossorigin="anonymous"
-    <link href="https://fonts.googleapis.com/css?family=Kosugi|Kosugi+Maru&display=swap" 
-    rel="stylesheet">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" 
+        href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+        crossorigin="anonymous" 
+        />
+    <link 
+        href="https://fonts.googleapis.com/css?family=Kosugi|Kosugi+Maru&display=swap" 
+        rel="stylesheet" 
+        />
 </head>
 <header>
   <nav id="navbar" class="nav">
@@ -19,7 +20,7 @@
       <li><a href="#projects">ポートフォリオ</a></li>
       <li><a href="#contact">お問い合わせ</a></li>
     </ul>
-  </nav
+  </nav>
 </header>
 <body>
     <section id="welcome-section" class="welcome-section">
