Changed naming convention of clouds to make more sense, fixed a mistyped style tag.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -25,19 +25,19 @@
 <body>
     <section id="welcome-section" class="welcome-section">
         <div id="background-wrap">
-            <div class="x1">
+            <div class="cloud1">
                 <div class="cloud"></div>
             </div>
-            <div class="x2">
+            <div class="cloud2">
                 <div class="cloud"></div>
             </div>
-            <div class="x3">
+            <div class="cloud3">
                 <div class="cloud"></div>
             </div>
-            <div class="x4">
+            <div class="cloud4">
                 <div class="cloud"></div>
             </div>
-            <div class="x5">
+            <div class="cloud5">
                 <div class="cloud"></div>
             </div>
         </div>
