trimmed the project pictures and added a new project.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -59,12 +59,12 @@
             class="project project-tile">
             <img 
             class="project-image"
-            src="assets/masamune.png"
+            src="assets/masamune.jpg"
             alt="project"
             />
             <p class="project-title">
                 <span class="code">&lt;</span>
-                Masamune Tribute Page 
+                Tribute Page Sample
                 <span class="code">&#47;&gt;</span>
             </p>
             </a>
@@ -79,7 +79,7 @@
             />
             <p class="project-title">
                 <span class="code">&lt;</span>
-                Survey Form 
+                Survey Form Sample
                 <span class="code">&#47;&gt;</span>
             </p>
             </a>
@@ -94,7 +94,22 @@
             />
             <p class="project-title">
                 <span class="code">&lt;</span>
-                Technical Documentation Page 
+                Documentation Sample Page
+                <span class="code">&#47;&gt;</span>
+            </p>
+            </a>
+            <a 
+            href="https://sakubs.github.io/product-landing/"
+            target="_blank"
+            class="project project-tile">
+            <img 
+            class="project-image"
+            src="assets/product.jpg"
+            alt="project"
+            />
+            <p class="project-title">
+                <span class="code">&lt;</span>
+                Product Page Sample
                 <span class="code">&#47;&gt;</span>
             </p>
             </a>
