removed the htdocs folder.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     </section>
     <section id="contact">
         <h2>一緒に素晴らしいものを作りましょう</h2>
+        <p>経験</p>
         <ul>
             <li>ホームページを作る</li>
             <li>アンドロイドのアプリ</li>
@@ -124,6 +125,7 @@
             <li>WordPress</li>
             <li>Django</li>
             <li>Linux</li>
+            <li>Python, PHP, Javascript, C, Java, HTML, CSS</li>
         </ul>
         <p class="contact-font">お問い合わせ:</p>
         <div class="contact-links">
