added skills section.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <li>Django</li>
             <li>Linux</li>
             <li>Python, PHP, Javascript, C, Java, HTML, CSS</li>
+            <li>B.S. コンピューターエンジニアリング、Portland State University (2008)</li>
         </ul>
         <p class="contact-font">お問い合わせ:</p>
         <div class="contact-links">
