Added a timer function.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
     </section>
     <section id="contact">
         <h2>一緒に素晴らしいものを作りましょう</h2>
-        <p>経験</p>
         <ul>
             <li>ホームページを作る</li>
             <li>アンドロイドのアプリ</li>
@@ -125,7 +124,7 @@
             <li>WordPress</li>
             <li>Django</li>
             <li>Linux</li>
-            <li>Python, PHP, Javascript, C, Java, HTML, CSS</li>
+            <li>経験: Python, PHP, Javascript, C, Java, HTML, CSS</li>
             <li>B.S. コンピューターエンジニアリング、Portland State University (2008)</li>
         </ul>
         <p class="contact-font">お問い合わせ:</p>
