Added some animated fireflies to the forest.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
   </nav>
 </header>
 <body>
+
+<!-- Quantity should be the same in Sass-->
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
     <section id="welcome-section" class="welcome-section">
         <div id="background-wrap">
             <div class="cloud1">
