Changed the text on the welcome page.

--- a/index.html
+++ b/index.html
@@ -23,44 +23,26 @@
   </nav>
 </header>
 <body>
-
-<!-- Quantity should be the same in Sass-->
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
-<div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    <div class="firefly"></div>
+    
     <section id="welcome-section" class="welcome-section">
-        <div id="background-wrap">
-            <div class="cloud1">
-                <div class="cloud"></div>
-            </div>
-            <div class="cloud2">
-                <div class="cloud"></div>
-            </div>
-            <div class="cloud3">
-                <div class="cloud"></div>
-            </div>
-            <div class="cloud4">
-                <div class="cloud"></div>
-            </div>
-            <div class="cloud5">
-                <div class="cloud"></div>
-            </div>
-        </div>
-        <h1>櫻田ブライアン</h1>
-        <p>2009年からソフトウェアエンジニア</p>
-        <p>岩手県、日本</p>
+        <h1 id="welcome-name-h1">櫻田ブライアン</h1>
+        <p>岩手・日本</p>
+        <p>I make software for humans</p>
         <div id="tech">
             <i id="web" class="fas fa-desktop">ホームページ</i>
             <i id="mobile" class="fas fa-tablet-alt">アンドロイドのアプリ</i>
@@ -176,7 +158,7 @@
 </body>
 <footer>
     <p>
-        &copy; Brian Sakurada - 2019
+        &copy; Brian Sakurada - 2020
     </p>
 </footer>
 </html>
