Updated the screenshot for the technical documentation project.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="welcome-section" class="welcome-section">
         <h1 id="welcome-name-h1">櫻田ブライアン</h1>
         <p>岩手・日本</p>
-        <p>I make software for humans</p>
+        <p>Engineering dreams into reality</p>
         <div id="tech">
             <i id="web" class="fas fa-desktop">ホームページ</i>
             <i id="mobile" class="fas fa-tablet-alt">アンドロイドのアプリ</i>
@@ -88,7 +88,7 @@
             class="project project-tile">
             <img 
             class="project-image"
-            src="assets/techdoc.jpg"
+            src="assets/techdoc.png"
             alt="project"
             />
             <p class="project-title">
