Disabled the projects section for now.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav id="navbar" class="nav">
     <ul class="nav-list">
       <li><a href="#welcome-section">紹介</a></li>
-      <li><a href="#projects">ポートフォリオ</a></li>
+      <!-- <li><a href="#projects">ポートフォリオ</a></li> -->
       <li><a href="#contact">お問い合わせ</a></li>
     </ul>
   </nav>
@@ -50,7 +50,7 @@
         </div>
         </div>
     </section>
-    <section id="projects" class="projects-section">
+    <!-- <section id="projects" class="projects-section">
         <div class="projects-grid">
             <a 
             href="https://sakubs.github.io/masamune.github.io/"
@@ -113,7 +113,7 @@
             </p>
             </a>
         </div>
-    </section>
+    </section> -->
     <section id="contact">
         <h2>一緒に素晴らしいものを作りましょう</h2>
         <ul>
