removed tech list for simplicity.

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <h1 id="welcome-name-h1">櫻田ブライアン</h1>
         <p>岩手・日本</p>
         <p>Engineering dreams into reality</p>
-        <div id="tech">
+        <!-- <div id="tech">
             <i id="web" class="fas fa-desktop">ホームページ</i>
             <i id="mobile" class="fas fa-tablet-alt">アンドロイドのアプリ</i>
             <i id="laptop" class="fas fa-laptop">パソコンのアプリ</i>
-        </div>
+        </div> -->
         </div>
     </section>
     <!-- <section id="projects" class="projects-section">
